Fix WrapAsync import issue

--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -112,7 +112,7 @@
   .starability-slot > label {
     position: relative;
     display: inline-block;
-    float: left;  
+    float: none;
     width: 30px;
     height: 30px;
     font-size: 0.1em;
